# agentic-workflows

./: .env.example  .gitignore  requirements.txt
MAI-DxO/: README.md
research_papers/agentic_rag/raw/: arxiv_2401.15391v1.json  arxiv_2412.12881v1.json  arxiv_2510.25518v1.json
research_papers/big_bang/raw/: arxiv_1706.03138v1.json  arxiv_1706.03143v1.json  tavily_073b4d3a9eff.json  (+3 more)
research_papers/cycle_gan/: final_report.md
researchagent-mcp/: README.md  inspector_config.json  pyproject.toml  research_agent.py.backup  server_config.json
researchagent-mcp/research_papers/agentic_rag/: final_report.md
researchagent-mcp/research_papers/agentic_rag/raw/: arxiv_2502.13957v2.json  arxiv_2510.22344v1.json  wikipedia_progress_software.json
researchagent-mcp/research_papers/big_bang/: final_report.md
researchagent-mcp/research_papers/big_bang/raw/: arxiv_2301.12299v1.json  arxiv_2404.18503v1.json  tavily_011a340b7ea7.json  tavily_d9268b2e3157.json  wikipedia_the_big_bang_theory.json
researchagent-mcp/research_papers/cycle_gan/raw/: arxiv_2104.09630v2.json  arxiv_2307.05760v1.json
researchagent-mcp/src/: __init__.py  chat_interface.py  editor_agent.py  research_orchestrator_agent.py  writer_agent.py
researchagent-mcp/src/utils/: __init__.py
researchagent-mcp/tests/: TESTING.md  conftest.py  test_mcp_client.py  test_server.py  test_workflow.py
src/: main.py  planner_agent.py  research_agent.py  research_mcp_server.py
src/utils/: mcp_client.py  model_config.py
tests/: test_chat_interface.py  test_integration.py  test_research_workflow.py
(+5 files in other folders)
